Falling Powder Snow blocks now also cause entities to freeze.

--- a/src/main/resources/fallingpowdersnow.mixins.json
+++ b/src/main/resources/fallingpowdersnow.mixins.json
@@ -4,6 +4,8 @@
   "package": "de.fisch37.fallingpowdersnow.mixin",
   "compatibilityLevel": "JAVA_21",
   "mixins": [
+    "EntityMixin",
+    "FallingBlockEntityMixin",
     "PowderSnowBlockMixin"
   ],
   "injectors": {
